syntax = "proto3";

package user;

// option go_package = ".";
option go_package = "github.com/loak155/microservices/proto/user";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
// import "validate/validate.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse){
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse){
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse){
    option (google.api.http) = {
      get: "/v1/users/email/{email}"
    };
  }
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse){
    option (google.api.http) = {
      get: "/v1/users"
    };
  }
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse){
    option (google.api.http) = {
      put: "/v1/users"
      body: "*"
    };
  }
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse){
    option (google.api.http) = {
      delete: "/v1/users/{id}"
    };
  }
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message ListUsersRequest {
}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
